# CommonLibSSE

./: !Update.ps1  .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CommonLibCore.ruleset  CommonLibSSE.natvis  CommonLibSSE.sln  CommonLibSSE.vcxproj  CommonLibSSE.vcxproj.filters  CommonLibSSE2.sln  CommonLibSSE2.vcxproj  CommonLibSSE2.vcxproj.filters  FormatAll.py  IncludeGen.py  LICENSE  MakeGen.py  ProjectGen.py  README.md  bootstrap.ps1  exports.def  headerlist.cmake  sourcelist.cmake  vc-fileutils.settings  vcpkg.json
.github/workflows/: formatting.yml  main_ci.yml  maintenance.yml  meta_info.yml
Flash/AS2/CLIK/: Amp.as  Button.as  Mouse.as  MovieClip.as  Selection.as  Stage.as  TextField.as  TextFormat.as
cmake/: config.cmake.in  headerlist.cmake  sourcelist.cmake
include/: Atomic.h  ForceInclude.h  Logging.h  SKSEInterface.h  Util.h  Utility.h  function_ref.h  function_view.h
include/RE/: AIProcess.h  AIProcessManager.h  AITimeStamp.h  AbsorbEffect.h  AbstractHeap.h  ActivateHandler.h  ActiveEffect.h  ActiveEffectReferenceEffectController.h  Actor.h  ActorCause.h  ActorEquipManager.h  ActorKnowledge.h  ActorMover.h  ActorPackage.h  ActorProcessManager.h  ActorSpeedChannel.h  ActorState.h  ActorTargetCheck.h  ActorValueInfo.h  ActorValueMeter.h  ActorValueOwner.h  ActorValues.h  AddCallbackVisitor.h  AlchemyItem.h  AlchemyMenu.h  AllFiles.h  AnimationVariableData.h  Archive.h  ArmorRatingVisitor.h  ArmorRatingVisitorBase.h  ArrowProjectile.h  Atmosphere.h  AttackAnimationArrayMap.h  AttackBlockHandler.h  AutoMoveHandler.h  AutoRegisterCreator.h  AutoRegisterFactory.h  BGSAbilityPerkEntry.h  BGSAcousticSpace.h  BGSAction.h  (+1160 more)
include/RE/A/: AIFormulas.cpp  AIFormulas.h  AIProcess.cpp  AIProcess.h  AITimeStamp.h  AITimer.h  AbsorbEffect.h  AbstractHeap.h  ActivateHandler.h  ActiveEffect.cpp  ActiveEffect.h  ActiveEffectReferenceEffectController.h  Actor.cpp  Actor.h  ActorCause.cpp  ActorCause.h  ActorEquipManager.cpp  ActorEquipManager.h  ActorKill.h  ActorKnowledge.h  ActorMagicCaster.h  ActorMover.h  ActorPackage.h  ActorSpeedChannel.h  ActorState.h  ActorTargetCheck.h  ActorValueInfo.h  ActorValueList.cpp  ActorValueList.h  ActorValueMeter.h  ActorValueOwner.cpp  ActorValueOwner.h  ActorValues.h  AddCallbackVisitor.cpp  AddCallbackVisitor.h  AlchemyItem.h  AlchemyMenu.h  Archive.h  ArmorRatingVisitor.cpp  ArmorRatingVisitor.h  (+18 more)
include/RE/AI/: AIFormulas.cpp  AIFormulas.h  AIProcess.h  HighProcessData.h  MiddleHighProcessData.h  ProcessLists.h
include/RE/Animation/: ActorSpeedChannel.h  BSAnimationGraphManager.h  IAnimationSetCallbackFunctor.h  IPostAnimationChannelUpdateFunctor.h
include/RE/B/: BGSAbilityPerkEntry.h  BGSAcousticSpace.h  BGSAction.h  BGSActorCellEvent.h  BGSActorEvent.h  BGSAddToPlayerInventoryEvent.h  BGSAddonNode.h  BGSAnimationSequencer.h  BGSApparatus.h  BGSArtObject.h  BGSAssociationType.h  BGSAttackData.cpp  BGSAttackData.h  BGSAttackDataForm.h  BGSAttackDataMap.h  BGSBaseAlias.cpp  BGSBaseAlias.h  BGSBehaviorGraphModel.h  BGSBipedObjectForm.cpp  BGSBipedObjectForm.h  BGSBlockBashData.h  BGSBodyPartData.h  BGSBodyPartDefs.h  BGSCameraPath.h  BGSCameraShot.h  BGSCollisionLayer.h  BGSColorForm.cpp  BGSColorForm.h  BGSConstructibleObject.h  BGSDebris.h  BGSDecalGroup.h  BGSDecalManager.cpp  BGSDecalManager.h  BGSDecalNode.h  BGSDefaultObjectManager.cpp  BGSDefaultObjectManager.h  BGSDestructibleObjectForm.h  BGSDialogueBranch.h  BGSDirectionalAmbientLightingColors.h  BGSDistantTreeBlock.h  (+345 more)
include/RE/BSAttachTechniques/: AttachTechniqueInput.h
include/RE/BSAudio/: BGSMoviePlayer.h  BSAudioManager.h  BSGameSound.h  BSIMusicType.h  BSISoundCategory.h  BSISoundOutputModel.h  BSSoundHandle.h
include/RE/BSCore/: BGSLocalizedStringDL.h  BSCoreTypes.h  BSFixedString.cpp  BSFixedString.h  BSPointerHandle.h  BSPointerHandleManagerInterface.h  BSPointerHandleSmartPointer.h  BSString.h  BSStringPool.h  BSTArray.cpp  BSTArray.h  BSTCaseInsensitiveStringMap.h  BSTCreateFactoryManager.cpp  BSTCreateFactoryManager.h  BSTEvent.h  BSTFreeList.h  BSTHashMap.h  BSTList.h  BSTLocklessQueue.h  BSTMessageQueue.h  BSTObjectDictionary.h  BSTPointerAndFlags.h  BSTSmartPointer.h  BSTTuple.h  BSUntypedPointerHandle.h  CRC.h
include/RE/BSDevices/: BSInputDeviceManager.h  ControlMap.h  UserEvents.h  (+5 more)
include/REL/: Relocation.cpp  Relocation.h  SafeWrite.h  Version.h
include/SKSE/: API.cpp  API.h  CodeGenerator.h  Events.h  IAT.cpp  IAT.h  Interface.h  Interfaces.cpp  Interfaces.h  Logger.cpp  Logger.h  RegistrationMap.cpp  RegistrationMap.h  RegistrationMapUnique.cpp  RegistrationMapUnique.h  RegistrationSet.cpp  RegistrationSet.h  RegistrationSetUnique.cpp  RegistrationSetUnique.h  RegistrationTraits.h  SKSE.h  SafeWrite.h  Stubs.h  Trampoline.cpp  Trampoline.h  Util.h  VArgFormatter.h  Version.h
scripts/: cmake_generate.py
src/: .clang-format  Logging.cpp  SKSEInterface.cpp
src/RE/: AIProcess.cpp  AIProcessManager.cpp  ActiveEffect.cpp  Actor.cpp  ActorCause.cpp  ActorEquipManager.cpp  ActorKnowledge.cpp  ActorProcessManager.cpp  ActorState.cpp  ActorValueOwner.cpp  BGSAttackData.cpp  BGSBaseAlias.cpp  BGSBipedObjectForm.cpp  BGSDefaultObjectManager.cpp  BGSEntryPointFunctionDataActivateChoice.cpp  BGSEntryPointPerkEntry.cpp  BGSFootstepManager.cpp  BGSHeadPart.cpp  BGSKeywordForm.cpp  BGSListForm.cpp  BGSLocation.cpp  BGSPerkEntry.cpp  BGSSaveLoadManager.cpp  BGSSoundCategory.cpp  BGSStoryTeller.cpp  BSAtomic.cpp  BSAudioManager.cpp  BSExtraData.cpp  BSFaceGenAnimationData.cpp  BSFixedString.cpp  BSGlobalStringTable.cpp  BSHandleRefObject.cpp  BSIMusicType.cpp  BSInputDevice.cpp  BSInputDeviceManager.cpp  BSIntrusiveRefCounted.cpp  BSKeyboardDevice.cpp  BSLightingShaderMaterialBase.cpp  BSLock.cpp  BSReadWriteLock.cpp  (+225 more)
src/REL/: Relocation.cpp  SafeWrite.cpp
src/SKSE/: API.cpp  CodeGenerator.cpp  IAT.cpp  Interface.cpp  Interfaces.cpp  Logger.cpp  RegistrationMap.cpp  RegistrationMapUnique.cpp  RegistrationSet.cpp  RegistrationSetUnique.cpp  SafeWrite.cpp  Trampoline.cpp  VArgFormatter.cpp
(+3000 files in other folders)
